--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
                   </div>
                   <div class="carousel-item text-center">
                     <p>“Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.”</p>
-                    <h4>Abdelmalek Ennani</h4>
+                    <h4>Jhon Doe</h4>
                   </div>
                   <div class="carousel-item text-center">
                     <p>“Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.”</p>
-                    <h4>Hicham Ennani</h4>
+                    <h4>Doe Alex</h4>
                   </div>
                 </div>
               </div>
@@ -348,6 +348,6 @@
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
